--- a/pasta-css/sinopse.css
+++ b/pasta-css/sinopse.css
@@ -163,7 +163,7 @@ h1 {
   background-color: #e3e4e7;
   color: white;
   cursor: not-allowed;
-  
+
 }
 
 #btn-download:hover {
@@ -261,6 +261,17 @@ h1 {
     justify-content: center;
     align-items: center;
     display: flex;
+
+  }
+
+  #autor,
+  #paginas,
+  #paginas2 {
+    font-size: 12.6px;
+  }
+
+  #autor {
+    margin-left: 6px;
   }
 
   .sinopse p {
@@ -301,13 +312,13 @@ h1 {
     color: white;
     cursor: not-allowed;
     width: 180px;
-    
+
   }
 
   #btn-Ler {
     margin-right: 15px;
   }
 
-  
+
 
 }
