--- a/pasta-css/perfil.css
+++ b/pasta-css/perfil.css
@@ -10,7 +10,8 @@ body {
   justify-content: center;
   margin: 60px auto;
   padding: 0 20px;
-  margin-top: 90px;
+  margin-bottom: 170px;
+  margin-top: 190px;
 }
 
 /* Sidebar de perfil */
