--- a/pasta-css/perfil.css
+++ b/pasta-css/perfil.css
@@ -12,19 +12,20 @@ body {
   padding: 0 20px;
   margin-bottom: 170px;
   margin-top: 190px;
+
 }
 
 /* Sidebar de perfil */
 .profile-sidebar {
   flex: 1;
-  max-width: 320px;
+  width: 100%;
 }
 
 /* Avatar */
 .profile-avatar-wrapper {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   margin: 0 auto 1.2rem auto;
   border-radius: 50%;
   overflow: hidden;
@@ -36,29 +37,6 @@ body {
   height: 100%;
   object-fit: cover;
   display: block;
-}
-
-.avatar-upload-btn {
-    position: absolute;
-    bottom: 6px;
-    right: 6px;
-    background-color: blue;
-    color: white;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-
-}
-
-.avatar-upload-btn:hover {
-    background-color: #0056b3;
 }
 
 /* Nome do usuário */
@@ -122,32 +100,51 @@ body {
   font-weight: 600;
   color: var(--primary-color);
 }
+
 .profile-avatar-container {
-        position: relative;
-        width: 150px; /* Defina o tamanho que desejar */
-        height: 150px;
-    }
+  position: relative;
+  width: 150px;
+  /* Defina o tamanho que desejar */
+  height: 150px;
+}
 
-    #avatarImage {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%; /* Deixa a imagem redonda */
-        object-fit: cover; /* Garante que a imagem preencha o círculo sem distorcer */
-        border: 3px solid #007bff; /* Apenas um estilo de exemplo */
-    }
+#avatarImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  /* Deixa a imagem redonda */
+  object-fit: cover;
+  /* Garante que a imagem preencha o círculo sem distorcer */
+  border: 3px solid #007bff;
+  /* Apenas um estilo de exemplo */
+}
 
-    #cameraIcon {
-        position: absolute;
-        bottom: 5px;
-        right: 5px;
-        background-color: rgba(0, 0, 0, 0.6);
-        color: white;
-        padding: 8px;
-        border-radius: 50%;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
+#cameraIcon {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 8px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
-    #cameraIcon:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
+#cameraIcon:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+@media (max-width: 768px) {
+
+  #user-name {
+    font-size: 1.1rem;
+    margin: 1rem 0 0.4rem;
+    font-weight: 600;
+    color: var(--text-color);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+}
