adicionando um detalhe ao css de algumas paginas

--- a/pasta-css/home.css
+++ b/pasta-css/home.css
@@ -502,6 +502,11 @@ h2 {
     text-decoration: underline;
 }
 
+/* Esconde a imagem padrão somente quando estiver logado */
+body.logado .profile-img img[src*="SemFoto.jpg"] {
+  display: none;
+}
+
 .fim-direita {
     flex: 1;
     display: flex;
